Added OSGi plugin for generation OSGi bundles
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1024 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -1,3 +1,4 @@
 java=org.gradle.api.plugins.JavaPlugin
 groovy=org.gradle.api.plugins.GroovyPlugin
 war=org.gradle.api.plugins.WarPlugin
+osgi=org.gradle.api.plugins.osgi.OsgiPlugin
