Made timestamp of snapshot versions ISO-8601 compliant.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1037 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -118,7 +118,7 @@ build.taskGraph.whenReady {graph ->
         userguideRemoteDir += version
         javadocRemoteDir += version
     } else {
-        versionModifier = new SimpleDateFormat('yyMMddHHmmssZ').format(buildTime)
+        versionModifier = new SimpleDateFormat('yyyyMMddHHmmssZ').format(buildTime)
         distributionUploadUrl = 'https://dav.codehaus.org/snapshots.dist/gradle'
         userguideRemoteDir += 'latest'
         javadocRemoteDir += "latest"
