Added Maven Plugin (which creates just an install task at the moment)
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1061 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -3,3 +3,4 @@ groovy=org.gradle.api.plugins.GroovyPlugin
 war=org.gradle.api.plugins.WarPlugin
 osgi=org.gradle.api.plugins.osgi.OsgiPlugin
 jetty=org.gradle.api.plugins.jetty.JettyPlugin
+maven=org.gradle.api.plugins.MavenPlugin
