Delegate commons-logging to slf4j
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1066 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     }
 
     clientModule(['compile'], ":commons-httpclient:3.0") {
-        dependencies(":commons-codec:1.2", ":commons-logging:1.0.3")
+        dependencies(":commons-codec:1.2", ":jcl-over-slf4j:1.5.3")
     }
 
     // Needed by the eclipse plugin
