--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,7 @@ dependencies {
             ":commons-lang:2.3@jar",
             ":webdavlib:2.0",
             ":bndlib:0.0.255@jar",
-            ":ivy:2.1.x-20081015233855@jar",
+            ":ivy:2.0.0-rc2@jar",
             ":maven-ant-tasks:2.0.9"
     
     runtime ":ant-launcher:1.7.0",
