Make pom individually customizable for install and deploy.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1073 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -6,8 +6,8 @@ import org.gradle.api.DependencyManager
 usePlugin('groovy')
 
 dependencies {
-    addFlatDirResolver('lib', new File(rootDir, 'lib'))
-    dependencies(['compile'], ":svnkit:1.1.6", ":svnkit-javahl:1.1.6", ":xmlunit:1.2")
+    addFlatDirResolver('lib', new File(rootDir, 'lib'), new File(rootDir.parentFile, 'lib'))
+    compile ":svnkit:1.1.6", ":svnkit-javahl:1.1.6", ":xmlunit:1.2", ':hamcrest-core:1.1', ':hamcrest-library:1.1'
 }
 
 sourceCompatibility = 1.5
