Added intellij files to ignore
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1076 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ src/docs/userguide/*.aux
 src/docs/userguide/*.out
 src/docs/userguide/*.log
 src/docs/userguide/*.toc
+gradle-core.iml
+userguide-trunk.tmproj
