--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ src/docs/userguide/*.aux
 src/docs/userguide/*.out
 src/docs/userguide/*.log
 src/docs/userguide/*.toc
+src/docs/userguide/*.pdf
 gradle-core.iml
 userguide-trunk.tmproj
