Incremented version properties
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1089 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-#Tue Sep 16 10:15:13 CEST 2008
-previousMinor=4
+#Thu Dec 04 17:56:38 CET 2008
+previousMinor=5
 previousRevision=0
 previousMajor=0
