Fixed bug for upload location of latest user's guide
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1093 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,7 @@ build.taskGraph.whenReady {graph ->
     } else {
         versionModifier = new SimpleDateFormat('yyyyMMddHHmmssZ').format(buildTime)
         distributionUploadUrl = 'https://dav.codehaus.org/snapshots.dist/gradle'
-        userguideRemoteDir += userguideRemoteDirRoot + 'latest'
+        userguideRemoteDir = userguideRemoteDirRoot + 'latest'
         javadocRemoteDir = javadocRemoteDirRoot + "latest"
     }
     manifest.mainAttributes([
