Fixed problem with hasProperty method of task shadowing hasProperty method of project.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1098 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -233,7 +233,7 @@ createTask('retroTranslateLibs', dependsOn: 'explodedDist') {
         }
     }
 }.configure {
-    enabled = hasProperty('gradle_retroLibsDir')
+    enabled = project.hasProperty('gradle_retroLibsDir')
     skipProperties << 'skip.archive_all-jdk14_zip'
 }
 
@@ -287,7 +287,7 @@ dists {
         }
     }.configure {
         dependsOn 'retroTranslateLibs'
-        enabled = hasProperty('gradle_retroLibsDir')
+        enabled = project.hasProperty('gradle_retroLibsDir')
     }
     zip(classifier: 'bin').doFirst {Task task ->
         task.configure {
