Added an 'ide' task to the gradle build, which builds a 'lib' directory containing all the runtime and test runtime jars
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1121 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -464,6 +464,16 @@ uploadDists {
 
 createTask('developerBuild', dependsOn: ['clean', 'integTest'])
 
+createTask('ide') {
+    def libDir = file('lib')
+    ant.delete(dir: libDir)
+    [dependencies.runtime, dependencies.testRuntime].each {config ->
+        config.files.each {file ->
+            ant.copy(file: file, todir: libDir)
+        }
+    }
+}
+
 createTask('release', dependsOn: ['uploadDists', 'uploadUserguide', 'uploadJavadoc']) {
     svn.release()
 }
