GRADLE-263: - Replaced -x option with '-C off' - Replaced -r option with '-C rebuild' - Added -r option which prints out the properties of the current project - Added initial PropertyListTask. Not finished yet.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1123 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -27,3 +27,13 @@ test {
     // We set forkmode to ONCE as our tests are written in Groovy and the startup time of Groovy is significant.
     options.fork(forkMode: org.gradle.api.tasks.testing.ForkMode.ONCE)
 }
+
+createTask('ide') {
+    def libDir = file('lib')
+    ant.delete(dir: libDir)
+    [dependencies.runtime, dependencies.testRuntime].each {config ->
+        config.files.each {file ->
+            ant.copy(file: file, todir: libDir)
+        }
+    }
+}
