GRADLE-299: - Added 'project-reports' plugin, which adds task, property, and dependency reports to the project. Currently still just to the same as the command-line options. - Extracted common superclasses out of report tasks and renderers.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1131 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -4,3 +4,4 @@ war=org.gradle.api.plugins.WarPlugin
 osgi=org.gradle.api.plugins.osgi.OsgiPlugin
 jetty=org.gradle.api.plugins.jetty.JettyPlugin
 maven=org.gradle.api.plugins.MavenPlugin
+project-reports=org.gradle.api.plugins.ProjectReportsPlugin
