--- a/src/samples/javaproject/api/build.gradle
+++ b/src/samples/javaproject/api/build.gradle
@@ -8,6 +8,9 @@ dependencies {
     addConfiguration('spi')
 }
 
+// Just a smoke test that using tjis option does not lead to any exception
+compile.options.compilerArgs = [[value: "-Xlint:unchecked"]]
+
 libs.jar(appendix: 'spi', confs: ['spi']) {
     fileSet() {
         include('org/gradle/api/')
