--- a/src/toplevel/plugin.properties
+++ b/src/toplevel/plugin.properties
@@ -1,3 +1,4 @@
+base=org.gradle.api.plugins.BasePlugin
 java=org.gradle.api.plugins.JavaPlugin
 groovy=org.gradle.api.plugins.GroovyPlugin
 war=org.gradle.api.plugins.WarPlugin
