Fixed bug in build script with wrong notation for dom4j dependency.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1157 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     }
 
     // Needed by the eclipse plugin
-    clientModule(['compile'], ":dom4j:1.6.1") {
+    clientModule(['compile'], "dom4j:dom4j:1.6.1") {
         dependencies("jaxen:jaxen:1.1@jar")
     }
 
