GRADLE-343    Jetty plugin fails to start with 2.5 deployment descriptor
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/branches/RB-0.5@1164 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     runtime("org.apache.ant:ant-junit:1.7.0@jar")
 
     clientModule(['compile'], "org.mortbay.jetty:jetty:6.1.14") {
-        dependencies("javax.servlet:servlet-api:2.5@jar", "org.mortbay.jetty:jetty-naming:6.1.14@jar")
+        dependencies("javax.servlet:servlet-api:2.5@jar", "org.mortbay.jetty:jetty-naming:6.1.14@jar", "org.mortbay.jetty:jetty-annotations:6.1.14@jar")
     }
     compile "org.mortbay.jetty:jetty-plus:6.1.14@jar", "org.mortbay.jetty:jetty-util:6.1.14@jar", "javax.servlet:servlet-api:2.5@jar"
 
