Fixed problem with retrogenerating the JDK1.4 compatible distro
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/branches/RB-0.5@1167 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,6 @@ versionModifier = null
 
 webSrcDir = new File("$srcRoot", 'website')
 
-libDir = new File(rootDir, 'lib')
-
 dependencies {
     addMavenRepo()
     // todo: Improve dependency handling for xUnit jars
@@ -227,7 +225,7 @@ createTask('retroTranslateLibs', dependsOn: 'explodedDist') {
         retroFiles.each {File file ->
             retroExe(file) {
                 fileset(dir: distsRetroLibsFolder)
-                fileset(dir: libDir, excludes: libExcludes)
+                fileset(dir: explodedDistLibDir, excludes: libExcludes)
                 fileset(dir: gradle_retroLibsDir)
             }
         }
