Some tweaks to docbook userguide generation
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@1208 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -436,6 +436,9 @@ createTask('userguideStyleSheets') {
     ant.unzip(src: dependencies.userGuideStyleSheets.singleFile, dest: docbookDir) {
         globmapper(from: 'docbook-xsl-1.74.0/*', to: '*')
     }
+    ant.copy(todir: docbookDir) {
+        fileset(dir: userguideSrc, includes: '*.xsl')
+    }
 }
 
 createTask('userguideHtml', dependsOn: ['userguideSrc', 'userguideStyleSheets']) {
@@ -446,17 +449,8 @@ createTask('userguideHtml', dependsOn: ['userguideSrc', 'userguideStyleSheets'])
         arg(value: '-in')
         arg(value: new File(docbookSrc, 'userguide.xml'))
         arg(value: '-xsl')
-        arg(value: new File(docbookDir, 'html/chunkfast.xsl'))
-        arg(line: '-param use.extensions 1')
-        arg(line: "-param root.filename userguide")
+        arg(value: new File(docbookDir, 'userGuideHtml.xsl'))
         arg(line: "-param base.dir ${userguideOutDir}/")
-        arg(line: "-param html.stylesheet style.css")
-        arg(line: "-param chunk.section.depth 0")
-        arg(line: "-param chunk.quietly 1")
-        arg(line: "-param make.single.year.ranges 1")
-        arg(line: "-param section.autolabel 1")
-        arg(line: "-param section.label.includes.component.label 1")
-        arg(line: "-param navig.showtitles 1")
         classpath {
             path(path: dependencies.userGuideTask.asPath)
             path(location: new File(docbookDir, 'extensions/xalan27.jar'))
@@ -473,15 +467,9 @@ createTask('userguideSingleHtml', dependsOn: ['userguideSrc', 'userguideStyleShe
         arg(value: '-in')
         arg(value: new File(docbookSrc, 'userguide.xml'))
         arg(value: '-out')
-        arg(value: new File(userguideOutDir, 'userguide.html'))
+        arg(value: new File(userguideOutDir, 'userguideSingle.html'))
         arg(value: '-xsl')
-        arg(value: new File(docbookDir, 'html/docbook.xsl'))
-        arg(line: '-param use.extensions 1')
-        arg(line: "-param html.stylesheet style.css")
-        arg(line: "-param make.single.year.ranges 1")
-        arg(line: "-param section.autolabel 1")
-        arg(line: "-param section.label.includes.component.label 1")
-        arg(line: "-param navig.showtitles 1")
+        arg(value: new File(docbookDir, 'userGuideSingleHtml.xsl'))
         classpath {
             path(path: dependencies.userGuideTask.asPath)
             path(location: new File(docbookDir, 'extensions/xalan27.jar'))
@@ -500,18 +488,9 @@ createTask('userguidePdf', dependsOn: ['userguideSrc', 'userguideStyleSheets']) 
         arg(value: '-in')
         arg(value: new File(docbookSrc, 'userguide.xml'))
         arg(value: '-xsl')
-        arg(value: new File(docbookDir, 'fo/docbook.xsl'))
+        arg(value: new File(docbookDir, 'userGuidePdf.xsl'))
         arg(value: '-out')
         arg(value: foFile)
-        arg(line: '-param use.extensions 1')
-        arg(line: '-param fop1.extensions 1')
-        arg(line: '-param paper.type A4')
-        arg(line: '-param body.start.indent 0pt')
-        arg(line: '-param body.font.family serif')
-        arg(line: "-param shade.verbatim 1")
-        arg(line: "-param make.single.year.ranges 1")
-        arg(line: "-param section.autolabel 1")
-        arg(line: "-param section.label.includes.component.label 1")
         classpath {
             path(path: dependencies.userGuideTask.asPath)
             path(location: new File(docbookDir, 'extensions/xalan27.jar'))
